2005-08-05 16:28 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridReconstructSplitEdgeRatio) initialized
	ring and call gridFillRingWithFaces for test.
	* src/gridinsert.c (gridFillRingWithFaces) get rid of segments by
	inserting triangles. Only a test of current face logic so far.

2005-08-05 15:14 Mike Park  <mike.park@nasa.gov>

	* src/ring.c (ringSegment) return segment info.

2005-08-05 13:35 Mike Park  <mike.park@nasa.gov>

	* src/ring.c (ringAddTriangle) adds three triangle sides as opposite
	sense segments

2005-08-05 13:18 Mike Park  <mike.park@nasa.gov>

	* src/ring.c (ringAddSegment) remove existing segment if it is added
	in opposite direction.

2005-08-05 10:15 Mike Park  <mike.park@nasa.gov>

	* src/ring.c (ringAddTriangle) abort traingle add if base segment does
	not exist

2005-08-05 09:42 Mike Park  <mike.park@nasa.gov>

	* src/ring.c (ringAddTriangle) add triangle to ring.

2005-08-05 09:22 Mike Park  <mike.park@nasa.gov>

	* src/ring.c (ringAddSegment) add segment to ring.

2005-08-05 09:04 Mike Park  <mike.park@nasa.gov>

	* src/Makefile (local,clean) removed dup Plan, added Ring
	* src/Makefile.am added Ring to libs and tests

2005-08-05 09:00 Mike Park  <mike.park@nasa.gov>

	* src/ring.c (ringCreate,ringFree) created new object to keep
	track of a continuous loop of linear segements on a geometry face
	that is meshed by filling with triangles.
	* src/ring.c (ringSegments,ringTriangles) return total counts.

2005-08-04 16:05 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridReconstructSplitEdgeRatio) refactored to
	test face0 and face1 subfaces independently.

2005-08-04 14:20 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridReconstructSplitEdgeRatio) return EMPTY
	without calls to gridRemoveCellsOutsideOfFaces if new surface
	faces do not exist in volume grid (to aid debugging).

2005-08-04 12:47 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridThreadCurveThroughVolume) logic bug that